fixed footer spacing

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -27,7 +27,7 @@ body {
 }
 
 footer {
-	padding: 15px 0;
+	padding: 15px 0 !important;
 }
 
 #inputs{
